# gremlinx

./: .prospector  README.md  makes.nix  pypi-deps.yaml  pypi-sources.yaml  pyproject.toml
gremlinx/: __init__.py  core.py  statics.py
gremlinx/utils/: classes.py  exceptions.py  statics.py
makes/runtime/: main.nix
test/: conftest.py  test_.py
