[tool.poetry]
name = "gremlinx"
version = "0.1.0"
description = ""
authors = ["Diego Restrepo <drestrepo@fluidattacks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "2.5"
Rx = "3.1.1"
gremlinpython = "3.4.8"

[tool.poetry.dev-dependencies]
yapf = "0.30.0"
prospector = "1.3.1"
Django = "3.1.3"
mypy = "0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
